-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
When xattr caching is disabled or bypassed extended attributes with zero length values are not handled correctly:
o:~# cd /mnt/lustre o:lustre# lctl set_param llite.*.xattr_cache=1 llite.lustre-ffff8c4ac8a60000.xattr_cache=1 o:lustre# rm -f f0 o:lustre# touch f0 o:lustre# setfattr -n user.blah f0 o:lustre# getfattr -d -m- f0 # file: f0 lustre.lov=0s0AvRCwEAAAADAAAAAAAAAAEEAAACAAAAAAAQAAEAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA= trusted.link=0s3/HqEQEAAAAsAAAAAAAAAAAAAAAAAAAAABQAAAACAAAABwAAAAEAAAAAZjA= trusted.lma=0sAAAAAAAAAAABBAAAAgAAAAMAAAAAAAAA trusted.lov=0s0AvRCwEAAAADAAAAAAAAAAEEAAACAAAAAAAQAAEAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA= trusted.version=0sDAAAAAEAAAA= user.blah o:lustre# lctl set_param llite.*.xattr_cache=0 llite.lustre-ffff8c4ac8a60000.xattr_cache=0 o:lustre# getfattr -d -m- f0 # file: f0 lustre.lov=0s0AvRCwEAAAADAAAAAAAAAAEEAAACAAAAAAAQAAEAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA= trusted.link=0s3/HqEQEAAAAsAAAAAAAAAAAAAAAAAAAAABQAAAACAAAABwAAAAEAAAAAZjA= trusted.lma=0sAAAAAAAAAAABBAAAAgAAAAMAAAAAAAAA trusted.lov=0s0AvRCwEAAAADAAAAAAAAAAEEAAACAAAAAAAQAAEAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA= trusted.version=0sDAAAAAEAAAA= f0: user.blah: No such attribute
I noticed this while looking at LU-11074 but this is not the underlying cause of that bug.